namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-learner-records-microservice-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-learner-records-microservice-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "lrs-microservice-team"
    cloud-platform.justice.gov.uk/application: "Access Department for Education learner records service data"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-learner-records-microservice"
    cloud-platform.justice.gov.uk/team-name: "lrs-microservice"
    cloud-platform.justice.gov.uk/review-after: ""
